# float-to-hex

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  floatToHex.cpp  float_to_hex.cpp
cmake/: Docs.cmake
configured/: CMakeLists.txt  config.h.in
converter/: CMakeLists.txt  ConverterService.cpp  ConverterService.h  converter.cpp  converter.h  read_file.cpp  read_file.h  write_file.cpp  write_file.h
converter/base_classes/: CMakeLists.txt  ConvertData.cpp  ConvertData.h  ConverterReader.cpp  ConverterReader.h  ConverterUtils.h  ConverterWriter.cpp  ConverterWriter.h  FloatToHexConverter.cpp  FloatToHexConverter.h  convert_data.cpp
converter_files/: converted.txt  float_dec.txt  float_hex.txt
docs/: Doxyfile
tests/: CMakeLists.txt  main.cpp
